rag_system/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-api
  template:
    metadata:
      labels:
        app: rag-api
    spec:
      containers:
        - name: rag-api
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "3Gi"
          image: rag-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 10   # wait a bit before first check
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: models-volume
              mountPath: /models
            - name: vector-db-volume
              mountPath: /vector_db
            - name: documents-volume
              mountPath: /data/documents
            - name: model-config
              mountPath: /app/configmap

      volumes:
        - name: models-volume
          persistentVolumeClaim:
            claimName: rag-models-pvc

        - name: vector-db-volume
          persistentVolumeClaim:
            claimName: rag-vector-db-pvc

        - name: documents-volume
          persistentVolumeClaim:
            claimName: rag-documents-pvc

        - name: model-config
          configMap:
            name: rag-model-config
