rag_system/k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:latest
          ports:
            - containerPort: 5000
          command: [ "/bin/sh" ]
          args:
            - "-c"
            - |
              mkdir -p /mlflow/artifacts && \
              mlflow db upgrade sqlite:////mlflow/mlflow.db && \
              mlflow server \
                --backend-store-uri=sqlite:////mlflow/mlflow.db \
                --default-artifact-root=/mlflow/artifacts \
                --host=0.0.0.0 \
                --port=5000 \
                --serve-artifacts \
                --cors-allowed-origins="*"
          volumeMounts:
            - name: mlflow-pvc
              mountPath: /mlflow
      volumes:
        - name: mlflow-pvc
          persistentVolumeClaim:
            claimName: mlflow-pvc
