rag_system/k8s/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 30050   # fixed port on host
  type: NodePort
